fixing menu overlapping on fullhd at first screen

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -142,7 +142,7 @@
   background: rgba(#fff, 0.4);
   position: fixed;
   backdrop-filter: blur(3px);
-  bottom: 30px;
+  bottom: 10px;
   left: 30px;
   padding: 30px 12px;
   z-index: 1000;
